# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG	= fixed a bug that was (or could have been) crashing

April 9, 2006
    Added mac_scrap module for macintosh clipboard support.

April 8, 2006
    Added scrap module for accessing the clipboard. As well as an example.
    Added access to the XEvent structure on unix/X11 installs.

March 11, 2006
    Fix for config_unix for x86_64 and SDL lib path. Thanks Matthew L Daniel.
    [BUG]Fix for parent init in sprite.GroupSingle. Thanks Alexander Sashnov.

March 1, 2006
    A cursors.py example from Kamilche.  Thanks!

February 11, 2006
    Changed the behaviour of Clock.tick to use SDL_Delay instead of a busy 
      loop.  Added a tick_busy_loop which uses the old behaviour.  This 
      is more consistent with what people think Clock.tick() will do.
      That is, not use 100% cpu to get more accurate timing.
    testsprite.py example, which is based off the testsprite.c in SDL
      shows the performance of sprites, and is a good test.
    Added gp2x package which contains some constants for the gp2x buttons.
      This will be where gp2x specific functionality will live.

January 12, 2006
    Endian patch for set_at() from Ivo Danihelka.

December 19, 2005
    Updates for Overlay. Detect hardware accel and allow "redisplay".

November 7, 2005
    Fix for sprite.AbstractGroup.has inf recursion bug. thanks Randy Kaelber.
    Began work on a sprite unittest.

October 28, 2005
    fix for do_set_icon when display not initialised. Thanks John Popplewell!
    Added missing read_unix_fonts_cache function. Thanks again John Popplewell.

October 24, 2005
    Add support for 64bit data types in surfarray.blit_array()

October 2, 2005
    switch to the new reference documentation system

September 8, 2005
    surface.array_colorkey now unlocks the surface after use[BUG].

September 1, 2005
    music.queue() now raises exception if load fails.
