@@ -4,6 +4,10 @@
 # BREAK = change breaks existing code
 # BUG	= fixed a bug that was (or could have been) crashing
 
+April 25, 2006
+    Added some new blend modes to blit. Add,sub,mult,max,min.
+    [BUG] Fixed SRCALPHA blending.  Thanks Lenard Lindstrom!
+
 April 9, 2006
     Added mac_scrap module for macintosh clipboard support.
 
